--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   		    <div class="twelve wide column">
             <h1 class="ui huge header title">Image Select</h1>
             <div class="github-buttons">
-							<a class="ui labeled tiny button github-websemantics-Image-Select-stars">
+							<a class="ui labeled tiny button github-websitebloger-Image-Select-stars">
 							  <div class="ui brand tiny button">
 							    <i class="star icon"></i> Stars
 							  </div>
@@ -206,10 +206,10 @@
 									<i class="spinner loading icon"></i>
 								</div>
 							</a>
-              <a class="ui tiny brand button github-websemantics-Image-Select-github">
+              <a class="ui tiny brand button github-websitebloger-Image-Select-github">
 							    <i class="github icon"></i> Github
 							</a>
-							<a class="ui tiny brand button github-websemantics-Image-Select-download">
+							<a class="ui tiny brand button github-websitebloger-Image-Select-download">
 							    <i class="download icon"></i> Download
 							</a>
            </div>
@@ -325,7 +325,7 @@
 
       <p>Check the provided <a href="example.html">example</a> for a detailed use case.</p>
 
-      <p>Having trouble with <i>Image Select</i>? create an <a href="https://github.com/websemantics/Image-Select/issues">issue</a> and we’ll help you sort it out.</p>
+      <p>Having trouble with <i>Image Select</i>? create an <a href="https://github.com/websitebloger/Image-Select/issues">issue</a> and we’ll help you sort it out.</p>
 
     </div>
 
@@ -334,7 +334,7 @@
       <div class="ui one column stackable center aligned page grid">
          <div class="column twelve wide">
            Built with <img data-preserve-html-node="true" src="img/logo-heart.svg" alt="love"> by &nbsp;<br/>
-           <h4><a href="http://websemantics.ca">Web Semantics, Inc.</a></h4>
+           <h4><a href="http://websitebloger.ca">Web Semantics, Inc.</a></h4>
          </div>
       </div>
   	</div>
@@ -347,7 +347,7 @@
   <script src="src/codemirror/mode/javascript/javascript.js" type="text/javascript"></script>
   <script src="src/codemirror/mode/shell/shell.js" type="text/javascript"></script>
   <script src="src/codemirror/mode/htmlmixed/htmlmixed.js" type="text/javascript"></script>
-  <script type="text/javascript" src="https://cdn.rawgit.com/websemantics/bragit/0.1.2/bragit.js"></script>
+  <script type="text/javascript" src="https://cdn.rawgit.com/websitebloger/bragit/0.1.2/bragit.js"></script>
   </script>
   <script type="text/javascript">
 
@@ -370,7 +370,7 @@
   <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-46772370-1']);
-  _gaq.push(['_setDomainName', 'websemantics.github.io']);
+  _gaq.push(['_setDomainName', 'websitebloger.github.io']);
   _gaq.push(['_setAllowLinker', true]);
   _gaq.push(['_trackPageview']);
   (function() {
