--- a/example.html
+++ b/example.html
@@ -16,7 +16,7 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-46772370-1']);
-  _gaq.push(['_setDomainName', 'websemantics.github.io']);
+  _gaq.push(['_setDomainName', 'websitebloger.github.io']);
   _gaq.push(['_setAllowLinker', true]);
   _gaq.push(['_trackPageview']);
 
